--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,25 @@
 {
     "name": "whalehunt-backend",
     "version": "1.0.0",
-    "main": "index.js",
-    "type": "commonjs",
+    "main": "dist/index.js",
+    "type": "module",
     "scripts": {
-        "start": "node index.js"
+        "build": "tsc",
+        "prestart": "npm run build",
+        "start": "node dist/index.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "sqlite3": "^5.1.6",
         "axios": "^1.6.7",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
         "node-telegram-bot-api": "^0.61.0",
-        "cors": "^2.8.5"
+        "sqlite3": "^5.1.6"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.3",
+        "@types/node": "^24.1.0",
+        "@types/node-telegram-bot-api": "^0.64.9",
+        "typescript": "^5.8.3"
     }
 }
